# my-exercises

./: .gitignore  README.md
ML2020_homeworks/: README.md  hw1_regression_PM2_5_Prediction.py  hw2_classification_binary_incom_prediction.py
cpp/defer/: CMakeLists.txt  Defer.hpp  README.md  main.cpp
cpp/log/: CMakeLists.txt  README.md
cpp/simple_event_loop/: CMakeLists.txt  main.cpp
cpp/simple_event_loop/event/: Event.cpp  EventQueue.cpp
cpp/simple_event_loop/event/include/: Base.h  Event.h  EventQueue.h
cpp/simple_nn/: CMakeLists.txt  README.md  main.cpp
cpp/simple_nn/nn/: Data.cpp  Net.cpp  Neuron.cpp
cpp/simple_nn/nn/include/: Data.h  Debug.h  Net.h  Neuron.h
cpp/typeinfo/: CMakeLists.txt  README.md  main.cpp  type_info.h
learning_ffmpeg/: README.md
learning_ffmpeg/streamparser/: AvcParser.cpp  CMakeLists.txt  main.cpp
learning_ffmpeg/streamparser/include/: AvcParser.h  StreamParser.h
log/: CMakeLists.txt  MyLog.cpp  MyLog.h  README.md  main.cpp  props
misc/: TaxCalculator.py
useful_snippets/android_YV12/: CMakeLists.txt  README.md  YV12.hpp  main.cpp
video/: basic_yuv_operations.ipynb
